img not showing bug fix

--- a/web/static/css/change_product_in_set_web.css
+++ b/web/static/css/change_product_in_set_web.css
@@ -177,16 +177,27 @@
     border-bottom: 1px dashed #e5e5e5 ;
 }
 
-
 .set-table-item-img{
-    width : 52px;
-    height : 52px;
+    min-width : 52px;
+    min-height : 52px;
+    max-width : 52px;
+    max-height : 52px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    border: 1px solid #e5e5e5;
+    position: relative;
 }
 
 .set-table-item-img img {
-    width : 50px;
-    height : 50px;
-    border: 1px solid #e5e5e5;
+    max-height: 90%;
+    max-width: 90%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
 }
 
 .set-table-item-category{
